--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberPermissions.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberPermissions.cshtml
@@ -14,7 +14,7 @@
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
                     @await Html.PartialAsync("Partials/Govuk/_ErrorSummary", errorsViewModel)
 
                     <div class="govuk-form-group @(ViewData.ModelState.IsValid ? string.Empty : "govuk-form-group--error")">
