updated packages for govuk-frontend and associated dependencies.
updated partial views to align with new frontend templates and styling

updated gulpfile to silence known deprecation warnings

updated structure around wwwroot folders generated to define a mroe consistent approach

now using the new govuk blue themed styling

--- a/src/FrontendAccountManagement.Web/assets/scss/application.scss
+++ b/src/FrontendAccountManagement.Web/assets/scss/application.scss
@@ -1,5 +1,5 @@
 $govuk-assets-path: '/manage-account/';
-@import '../../node_modules/govuk-frontend/govuk/all';
+@import 'index';
 
 // Components
 @import './components/language_toggle';
