Fixed code smells

--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
@@ -26,7 +26,7 @@
 
 @if (await _featureManager.IsEnabledAsync(FeatureFlags.ShowYourFeedbackFooter))
 {
-	<footer class="govuk-footer" role="contentinfo" areia-label="Footer">
+	<footer class="govuk-footer" role="contentinfo" aria-label="Footer">
 		<div class="govuk-width-container ">
 			<div class="govuk-footer__navigation">
 				<h2 class="govuk-!-margin-top-3 govuk-footer__heading govuk-heading-m">@Localizer["Footer.GetHelp"]</h2>
