--- a/src/FrontendAccountManagement.Web/Views/_ViewImports.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/_ViewImports.cshtml
@@ -7,4 +7,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FrontendAccountManagement.Web
 @inject IViewLocalizer Localizer
-@inject IStringLocalizer<ISharedResources> SharedLocalizer
+@inject IStringLocalizer<SharedResources> SharedLocalizer
