--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/TeamMemberDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/TeamMemberDetails.cshtml
@@ -14,7 +14,7 @@
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
             <div  id="teammemberdetails-wrapper">
-                <h1 class="govuk-fieldset__heading govuk-label--l">
+                <h1 class="govuk-heading-l">
                     @Localizer["CheckInvitationDetails"]
                 </h1>
                 <br/>
