--- a/src/FrontendAccountManagement.Web/assets/scss/application.scss
+++ b/src/FrontendAccountManagement.Web/assets/scss/application.scss
@@ -5,6 +5,10 @@ $govuk-assets-path: '/manage-account/';
 @import './components/language_toggle';
 @import './components/ordered_list';
 
+.govuk-tag {
+    max-width: inherit !important;
+}
+
 .govuk-notification-banner__heading {
     word-wrap: break-word;
 }
