fixed header and headings

--- a/src/FrontendAccountManagement.Web/Views/PermissionManagement/ConfirmChangePermission.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/PermissionManagement/ConfirmChangePermission.cshtml
@@ -27,7 +27,7 @@
             <div class="govuk-grid-column-two-thirds">
                 @await Html.PartialAsync("Partials/Govuk/_ErrorSummary", errorsViewModel)
                 
-                <h1 class="govuk-fieldset__heading govuk-label--l">
+                <h1 class="govuk-heading-l">
                     @Localizer["ConfirmChangePermission.Question"]
                 </h1>
 
