--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
@@ -20,7 +20,7 @@
 
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
-            <h1 class="govuk-fieldset__heading govuk-label--l">
+            <h1 class="govuk-heading-l">
                 @Localizer["CheckYourDetails"]
             </h1>
 
