Revert "Updated govuk-frontend to 5.11.1 (#225)"
This reverts commit 8926758d5b005134fbdc049caf6d61b46ef5a59f.

--- a/src/FrontendAccountManagement.Web/assets/scss/application.scss
+++ b/src/FrontendAccountManagement.Web/assets/scss/application.scss
@@ -1,5 +1,5 @@
 $govuk-assets-path: '/manage-account/';
-@import 'index';
+@import '../../node_modules/govuk-frontend/govuk/all';
 
 // Components
 @import './components/language_toggle';
