Reverted govuk-frontend 5.11.1 upgrade (#235)
* Revert "Fixed UI issues as part of upgrade to govuk-frontend 5.11.1 (#230)"

This reverts commit a7079936cee8883a0d28abd8e034362b2681915c.

* Revert "Updated govuk-frontend to 5.11.1 (#225)"

This reverts commit 8926758d5b005134fbdc049caf6d61b46ef5a59f.

--- a/src/FrontendAccountManagement.Web/assets/scss/application.scss
+++ b/src/FrontendAccountManagement.Web/assets/scss/application.scss
@@ -1,13 +1,9 @@
 $govuk-assets-path: '/manage-account/';
-@import 'index';
+@import '../../node_modules/govuk-frontend/govuk/all';
 
 // Components
 @import './components/language_toggle';
 @import './components/ordered_list';
-
-.govuk-tag {
-    max-width: inherit !important;
-}
 
 .govuk-notification-banner__heading {
     word-wrap: break-word;
